src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rooms__HasOptedOutOfRoomNotifications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates the contact has unsubscribed from iDialogue Room events and notifications.</inlineHelpText>
        <label>Has Opted Out Of Room Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__LatestRoomInvitationLink__c</fullName>
        <formula>IF( ISBLANK ( rooms__LatestRoomMembership__c ), 
   &apos;&apos;,
   rooms__LatestRoomMembership__r.rooms__Member_Room_Link__c
)</formula>
        <label>Latest Room Invitation Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rooms__LatestRoomMembership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Most recent rooms invitation. Lookup reference to membership record. For use in lightning email templates on Contact record, and referencing personalized room URL.</inlineHelpText>
        <label>Latest Room Membership</label>
        <referenceTo>rooms__DocumentRoomMember__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rooms__StripeCustomerID__c</fullName>
        <externalId>true</externalId>
        <label>Stripe Customer ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rooms__UniqueID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>